--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,10 @@ Thumbs.db
 .pytest_cache/
 htmlcov/
 
+# Build artifacts
+*.egg-info/
+build/
+dist/
+
 # Config with secrets (keep templates)
 config/google_credentials.json
